[gd_scene load_steps=4 format=3 uid="uid://cmap001"]

[ext_resource type="Script" path="res://scripts/map/game_map.gd" id="1"]
[ext_resource type="Script" path="res://scripts/managers/fog_manager.gd" id="2"]
[ext_resource type="Script" path="res://scripts/managers/selection_manager.gd" id="3"]

[node name="GameMap" type="Node2D"]
script = ExtResource("1")

[node name="TerrainLayer" type="TileMapLayer" parent="."]
tile_map_data_format = 1
rendering_quadrant_size = 8

[node name="FogLayer" type="TileMapLayer" parent="."]
tile_map_data_format = 1
rendering_quadrant_size = 8
z_index = 10

[node name="FogOfWar" type="Node2D" parent="."]
script = ExtResource("2")

[node name="SelectionManager" type="Node2D" parent="."]
script = ExtResource("3")
z_index = 20

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
position_smoothing_speed = 8.0

[node name="ResourcesContainer" type="Node2D" parent="."]

[node name="SacredSiteContainer" type="Node2D" parent="."]

[node name="UnitsContainer" type="Node2D" parent="."]

[node name="BuildingsContainer" type="Node2D" parent="."]
